--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <h2 class="mb-4">Your Orders</h2>
 <div *ngFor="let order of orders" class="order-card">
-  <h5>Order #{{order.orderId}}</h5>
+  <h5>Order #{{order.userId}}</h5>
   <p class="order-details">
     <strong>Order Status:</strong> {{order.orderStatus}}<br>
     <strong>Total Amount:</strong> ${{order.totalAmount}}<br>
